--- a/blocks/vehicle-container/__icon/__batteries/icon__batteries.css
+++ b/blocks/vehicle-container/__icon/__batteries/icon__batteries.css
@@ -1,9 +1,11 @@
 .icon__batteries {
   top: 55%;
   left: 34%;
-  background-image: url(../../../../images/battery-svgrepo-com.svg);
 }
 
-.icon__batteries:hover {
-  background-image: url(../../../../images/battery-active.svg);
+.icon__batteries::before {
+  content: '';
+  position: absolute;
+  background-repeat: no-repeat;
+  background-image: url(../../../../images/battery-svgrepo-com.svg);
 }
