--- a/blocks/vehicle-container/__icon/__diagnostics/icon__diagnostics.css
+++ b/blocks/vehicle-container/__icon/__diagnostics/icon__diagnostics.css
@@ -1,9 +1,11 @@
 .icon__diagnostics {
   top: 40%;
   left: 57%;
-  background-image: url(../../../../images/stethoscope-svgrepo-com.svg);
 }
 
-.icon__diagnostics:hover {
-  background-image: url(../../../../images/stethoscope-active.svg);
+.icon__diagnostics::before {
+  content: '';
+  position: absolute;
+  background-repeat: no-repeat;
+  background-image: url(../../../../images/stethoscope-svgrepo-com.svg);
 }
