--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,11 @@
 .page {
   margin: 0 auto;
-  font-family: 'Inter', Arial, sans-serif;
+  font-family: 'Roboto', 'Inter', sans-serif;
   max-width: 1280px;
-
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
