--- a/blocks/services/nav-tabs/__btn/nav-tabs__btn.css
+++ b/blocks/services/nav-tabs/__btn/nav-tabs__btn.css
@@ -11,9 +11,12 @@
   position: relative;
   border: none;
   border-bottom: 4px solid transparent;
+  background-color: #f5f5f5;
 }
 
 .nav-tabs__btn:hover {
   border-bottom-color: #ffc513;
-  transition: border-bottom-color 0.5s ease 0s;
+  background-color: #fbfbfb;
+  transition: all 0.5s ease 0s;
+
 }
