--- a/blocks/contacts/__paragraph/contacts__paragraph.css
+++ b/blocks/contacts/__paragraph/contacts__paragraph.css
@@ -3,6 +3,6 @@
   font-size: 18px;
   line-height: 24px;
   font-weight: 500;
-  color: #fff;
   text-transform: uppercase;
+  text-align: center;
 }
