--- a/blocks/section-intro/__subtitle/section-intro__subtitle.css
+++ b/blocks/section-intro/__subtitle/section-intro__subtitle.css
@@ -1,6 +1,6 @@
 .section-intro__subtitle {
   margin: 0;
-  padding: 0;
+  padding: 10px 0;
   text-align: center;
   font-size: 16px;
   font-weight: 600px;
