--- a/blocks/contacts/contacts.css
+++ b/blocks/contacts/contacts.css
@@ -1,7 +1,7 @@
 .contacts {
   margin: 0 auto;
   max-width: 1170px;
-  padding: 50px 10px;
+  padding: 20px 0;
   display: flex;
   justify-content: space-around;
   border-bottom: 2px solid white;
