--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,8 @@
 @import url('../blocks/section-intro/__dash/section-intro__dash.css');
 @import url('../blocks/section-intro/__subtitle/section-intro__subtitle.css');
 @import url('../blocks/section-intro/__title/section-intro__title.css');
+@import url('../blocks/preloader/preloader.css');
+@import url('../blocks/preloader/__image/preloader__image.css');
 
 /* Services */
 @import url(../blocks/services/services.css);
@@ -113,3 +115,8 @@
 @import url('../blocks/section-intro/__dash/_footer/section-intro__dash_footer.css');
 @import url('../blocks/footer/__subtitle/footer__subtitle.css');
 @import url('../blocks/footer/paragraph/_info/footer__paragraph_info.css');
+@import url('../blocks/footer/__list-wrapper/footer__list-wrapper.css');
+@import url('../blocks/footer/paragraph/_ticked/footer__paragraph_ticked.css');
+
+/* ticked-list */
+@import url('../blocks/ticked-list/ticked-list.css');
