--- a/blocks/contacts/contacts.css
+++ b/blocks/contacts/contacts.css
@@ -6,3 +6,11 @@
   justify-content: space-around;
   border-bottom: 2px solid white;
 }
+
+@media screen and (max-width:768px) {
+  .contacts {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+  }
+}
