--- a/blocks/experts/__slider-image/experts__slider-image.css
+++ b/blocks/experts/__slider-image/experts__slider-image.css
@@ -2,8 +2,8 @@
   display: block;
   margin: 0;
   padding: 0;
-  height: 290px;
-  width: 240px;
+  width: 100%;
+  overflow: hidden;
   border-bottom: 2px solid #ffc513;
   border-radius: 10px 10px 0 0;
 }
