--- a/blocks/footer/paragraph/_ticked/footer__paragraph_ticked.css
+++ b/blocks/footer/paragraph/_ticked/footer__paragraph_ticked.css
@@ -1,3 +1,9 @@
 .footer__paragraph_ticked {
   padding: 10px 0 0 25px;
 }
+
+@media screen and (max-width:768px) {
+  .footer__paragraph_ticked {
+    padding: 5px 0 0 25px;
+  }
+}
