--- a/blocks/footer/paragraph/footer__paragraph.css
+++ b/blocks/footer/paragraph/footer__paragraph.css
@@ -1,6 +1,10 @@
 .footer__paragraph {
   margin: 0;
   padding: 10px 0 0;
-  font-size: 16px;
-  line-height: 24px;
+}
+
+@media screen and (max-width:768px) {
+  .footer__paragraph {
+    padding: 5px 0 0;
+  }
 }
