--- a/blocks/interview/__wrapper/interview__wrapper.css
+++ b/blocks/interview/__wrapper/interview__wrapper.css
@@ -2,5 +2,10 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
+}
 
+@media screen and (max-width:768px) {
+  .interview__wrapper {
+    grid-template-columns: none;
+  }
 }
