--- a/blocks/news/news.css
+++ b/blocks/news/news.css
@@ -5,3 +5,9 @@
   display: grid;
   grid-template-columns: 1fr 2fr;
 }
+
+@media screen and (max-width:768px) {
+  .news {
+    grid-template-columns: none;
+  }
+}
