--- a/blocks/values/__title/values__title.css
+++ b/blocks/values/__title/values__title.css
@@ -1,7 +1,10 @@
 .values__title {
   margin: 0;
   padding: 0;
-  font-size: 22px;
-  line-height: 34px;
-  font-weight: 600;
+}
+
+@media screen and (max-width:768px) {
+  .values__title {
+    margin-top: 20px;
+  }
 }
