--- a/blocks/values/values.css
+++ b/blocks/values/values.css
@@ -1,6 +1,13 @@
 .values {
-  margin: 60px 20px 0;
+  padding: 60px 20px 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   column-gap: 30px;
+}
+
+@media screen and (max-width:768px) {
+  .values {
+    grid-template-columns: none;
+    padding: 30px 0;
+  }
 }
