--- a/blocks/brands/__ribbon/brands__ribbon.css
+++ b/blocks/brands/__ribbon/brands__ribbon.css
@@ -3,6 +3,7 @@
   padding: 0 20px;
   list-style-type: none;
   display: flex;
-  justify-content: space-around;
-
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px;
 }
