--- a/blocks/caption/__pic/caption__pic.css
+++ b/blocks/caption/__pic/caption__pic.css
@@ -1,9 +1,1 @@
-.caption__pic {
-  margin: 10px 10px 0 0;
-  padding: 0;
-  width: 25px;
-  height: 25px;
-  background-color: #fff;
-  border-radius: 50%;
-  border: none;
-}
+.caption__pic {}
