--- a/blocks/caption/caption.css
+++ b/blocks/caption/caption.css
@@ -1,16 +1,47 @@
 .caption {
-  margin: 0;
-  padding: 40px 0 0 30px;
+  padding: 20px 20px 20px 60px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  position: relative;
-  z-index: 0;
-  max-width: 380px;
   position: absolute;
-  top: 0px;
+  max-width: 380px;
+  top: -150px;
   left: 0px;
   background-color: rgba(69, 69, 69, 0.7);
   z-index: 10;
+}
+
+@media screen and (max-width: 768px) {
+  .caption {
+    padding: 10px 10px 10px 40px;
+  }
+}
+
+.caption::before {
+  content: '';
+  position: absolute;
+  -webkit-mask-size: 100%;
+  mask-size: 100%;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: white;
+  -webkit-mask-image: url('../../images/info-svgrepo-com.svg');
+  mask-image: url('../../images/info-svgrepo-com.svg');
+  width: 25px;
+  height: 25px;
+  top: 20px;
+  left: 20px;
+  background-color: #fff;
+  border-radius: 50%;
+  border: none;
+}
+
+@media screen and (max-width: 768px) {
+  .caption::before {
+    top: 10px;
+    left: 10px;
+    width: 20px;
+    height: 20px;
+  }
 }
