--- a/blocks/interview/__title/interview__title.css
+++ b/blocks/interview/__title/interview__title.css
@@ -1,4 +1,8 @@
 .interview__title {
   margin: 0;
-  padding: 20px 0 5px;
+  padding: 20px 0 0;
+}
+
+.interview__title:last-of-type {
+  padding-top: 0;
 }
