--- a/blocks/services/__interactive-pic.css/services__interactive-pic.css
+++ b/blocks/services/__interactive-pic.css/services__interactive-pic.css
@@ -1,7 +1,6 @@
 .interactive-pic {
-
-  margin: 0;
+  margin: auto 0;
   background-color: #616161;
   position: relative;
-  overflow: hidden;
+
 }
