--- a/blocks/vehicle-container/__icon/vehicle-container__icon.css
+++ b/blocks/vehicle-container/__icon/vehicle-container__icon.css
@@ -19,3 +19,19 @@
   background-size: 35px;
   transition: .2s all;
 }
+
+@media screen and (max-width: 768px) {
+  .vehicle-container__icon:before {
+    background-size: 20px;
+    width: 35px;
+    height: 35px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .vehicle-container__icon {
+    background-size: 20px;
+    width: 35px;
+    height: 35px;
+  }
+}
