--- a/blocks/vehicle-container/vehicle-container.css
+++ b/blocks/vehicle-container/vehicle-container.css
@@ -1,8 +1,14 @@
 .vehicle-container {
   margin: 0 auto;
   box-sizing: border-box;
-  padding: 10% 15%;
+  padding: 3% 15%;
   width: 100%;
   background-color: #616161;
   object-position: center;
+}
+
+@media screen and (max-width: 768px) {
+  .vehicle-container {
+    padding: 3% 1%;
+  }
 }
