--- a/blocks/caption/caption.css
+++ b/blocks/caption/caption.css
@@ -6,7 +6,7 @@
   align-items: flex-start;
   position: absolute;
   max-width: 380px;
-  top: -150px;
+  top: 0;
   left: 0px;
   background-color: rgba(69, 69, 69, 0.7);
   z-index: 10;
@@ -15,6 +15,7 @@
 @media screen and (max-width: 768px) {
   .caption {
     padding: 10px 10px 10px 40px;
+    top: -150px;
   }
 }
 
