--- a/blocks/services/__wrapper/services__wrapper.css
+++ b/blocks/services/__wrapper/services__wrapper.css
@@ -1,5 +1,10 @@
 .services__wrapper {
   background-color: #616161;
   position: relative;
-  padding-top: 150px;
+}
+
+@media screen and (max-width: 768px) {
+  .services__wrapper {
+    padding-top: 150px;
+  }
 }
