--- a/blocks/services/nav-tabs/__btn/nav-tabs__btn.css
+++ b/blocks/services/nav-tabs/__btn/nav-tabs__btn.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 100px;
   position: relative;
-  border: none;
+  border: 1px solid #e7e7e7;
   border-bottom: 4px solid transparent;
   background-color: #f5f5f5;
 }
