--- a/blocks/ticked-list/ticked-list.css
+++ b/blocks/ticked-list/ticked-list.css
@@ -5,9 +5,14 @@
 .ticked-list::before {
   content: "";
   position: absolute;
-  background-image: url('../../../images/tick-svgrepo-com.svg');
-  filter: invert(70%) sepia(98%) saturate(424%) hue-rotate(350deg) brightness(100%) contrast(103%);
   left: 0;
   width: 24px;
   height: 24px;
+  -webkit-mask-size: 100%;
+  mask-size: 100%;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  background-color: #ffc513;
+  -webkit-mask-image: url('../../../images/tick-svgrepo-com.svg');
+  mask-image: url('../../../images/tick-svgrepo-com.svg');
 }
