--- a/blocks/vehicle-container/vehicle-container.css
+++ b/blocks/vehicle-container/vehicle-container.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   display: block;
   box-sizing: border-box;
-  padding: 10%;
+  padding: 10% 5% 1%;
   width: 80%;
   background-color: #616161;
   object-position: center;
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 768px) {
   .vehicle-container {
-    padding: 3% 1%;
+    padding: 3% 1% 1%;
     width: 100%;
   }
 }
