--- a/blocks/header/__content/header__content.css
+++ b/blocks/header/__content/header__content.css
@@ -10,7 +10,7 @@
   content: '';
   position: absolute;
   left: 50px;
-  top: 0;
+  top: -5px;
   -webkit-mask-size: 100%;
   mask-size: 100%;
   height: 75px;
