--- a/blocks/header/__menu/header__menu.css
+++ b/blocks/header/__menu/header__menu.css
@@ -1,14 +1,27 @@
 .header__menu {
-  display: flex;
-  justify-content: flex-end;
-  gap: 100px;
+  display: grid;
+  position: relative;
+  grid-template-areas:
+    "header__topline"
+    "nav-bar";
 }
 
 @media screen and (max-width: 768px) {
   .header__menu {
-    flex-direction: column;
+    display: none;
+    grid-template-areas:
+      "nav-bar"
+      "header__topline";
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: black;
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    z-index: 100;
     justify-content: center;
     align-items: center;
-    max-height: 300px;
+    justify-items: center
   }
 }
