--- a/blocks/provide/__selector-wrapper/provide__selector-wrapper.css
+++ b/blocks/provide/__selector-wrapper/provide__selector-wrapper.css
@@ -1,4 +1,5 @@
 .provide__selector-wrapper {
+  margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   justify-content: space-evenly;
