--- a/blocks/nav-bar/__container/nav-bar__container.css
+++ b/blocks/nav-bar/__container/nav-bar__container.css
@@ -1,8 +1,8 @@
 .nav-bar__container {
-
+  margin: 0 auto;
   max-width: 1170px;
   position: relative;
-  border-bottom: 1px solid #e7e7e7;
+
 }
 
 .nav-bar__container::before {
@@ -35,3 +35,6 @@
     padding: 0px;
   }
 }
+
+/*
+*/
