--- a/blocks/nav-bar/__list/nav-bar__list.css
+++ b/blocks/nav-bar/__list/nav-bar__list.css
@@ -3,7 +3,7 @@
   padding: 0;
   list-style: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   max-width: 80%;
 }
 
