--- a/blocks/nav-bar/nav-bar.css
+++ b/blocks/nav-bar/nav-bar.css
@@ -3,11 +3,13 @@
   grid-area: nav-bar;
   background-color: white;
   width: 100%;
+  border-bottom: 1px solid #e7e7e7;
 }
 
 @media screen and (max-width: 768px) {
   .nav-bar {
     background-color: transparent;
+    border-bottom: none;
   }
 
 }
