--- a/blocks/provide/__info-wraper/provide__info-wraper.css
+++ b/blocks/provide/__info-wraper/provide__info-wraper.css
@@ -1,6 +1,7 @@
 .provide__info-wraper {
   display: none;
   grid-template-columns: repeat(2, 1fr);
+  align-items: center
 }
 
 @media screen and (max-width: 768px) {
