--- a/blocks/provide/__service-description/provide__service-description.css
+++ b/blocks/provide/__service-description/provide__service-description.css
@@ -1,5 +1,6 @@
 .provide__service-description {
-  padding: 20px;
+  box-sizing: border-box;
+  padding: 20px 20% 20px 20px;
   background-color: #393939;
   display: flex;
   gap: 10px;
