--- a/blocks/text/_style/_paragraph-reset/text_style_paragraph-reset.css
+++ b/blocks/text/_style/_paragraph-reset/text_style_paragraph-reset.css
@@ -2,5 +2,14 @@
   margin: 0;
   padding: 10px 0 0;
   font-weight: 600;
-  color: black;
+  color: #5e5e5e;
+  font-size: 16px;
+  line-height: 25px;
+}
+
+@media screen and (max-width:768px) {
+  .text_style_paragraph-reset {
+    font-size: 13px;
+    line-height: 20px;
+  }
 }
