--- a/blocks/services/__wrapper/services__wrapper.css
+++ b/blocks/services/__wrapper/services__wrapper.css
@@ -1,10 +1,13 @@
 .services__wrapper {
   background-color: #616161;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 768px) {
   .services__wrapper {
-    padding-top: 150px;
+    padding-top: 130px;
+
   }
 }
