--- a/blocks/experts/__label/experts__label.css
+++ b/blocks/experts/__label/experts__label.css
@@ -1,6 +1,6 @@
 .experts__label {
   margin: 0;
   padding: 13px 0 11px;
-  background-color: #000;
+  background-color: #3b3b3b;
   border-radius: 0 0 10px 10px;
 }
