--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,6 +2,6 @@
   width: 100%;
   box-sizing: border-box;
   padding: 20px;
-  background-color: #777;
+  background-color: #3b3b3b;
   color: #fff;
 }
