--- a/blocks/header/__topline/header__topline.css
+++ b/blocks/header/__topline/header__topline.css
@@ -1,5 +1,5 @@
 .header__topline {
-  padding: 10px;
+  padding: 5px 10px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
