--- a/blocks/nav-bar/__link/nav-bar__link.css
+++ b/blocks/nav-bar/__link/nav-bar__link.css
@@ -1,9 +1,10 @@
 .nav-bar__link {
   display: block;
-  padding: 22px 10px;
+  padding: 32px 10px;
   text-decoration: none;
   text-align: center;
-  border: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 768px) {
