--- a/blocks/provide/__link/provide__link.css
+++ b/blocks/provide/__link/provide__link.css
@@ -3,9 +3,11 @@
   padding: 5px 0;
   text-align: center;
   margin-top: 15px;
+  width: 50%;
 
   background-color: #ffc513;
   border-radius: 20px;
   color: white;
   text-decoration: none;
+
 }
