--- a/blocks/text/_style/_navbar/text_style_navbar.css
+++ b/blocks/text/_style/_navbar/text_style_navbar.css
@@ -1,7 +1,7 @@
 .text_style_navbar {
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 600;
-  color: black;
+  color: #3a3a3a;
 }
 
 @media screen and (max-width: 768px) {
